--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             }
             thead{
                 font-size: 20px;
-                background-color: lightgray;
+                background-color: red;
             }
         </style>
     </head>
